# chandodaya

./: README.md  analyze_test.py  main.py  pubspec.yaml  pyproject.toml  requirements.txt  user_input.py
android/app/: build.gradle.kts
assets/fonts/: pubspec.yaml
data/interim/: rigveda_sample_50.csv  samaveda_sample_50.csv  yajurveda_sample_50.csv
data/processed/: chanda_rules.json
data/raw/: only_Samveda.csv  only_Yajurveda.csv
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/models/: chandas_result.dart
lib/core/services/: api_service.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
models/: baseline_fullchanda_clf.joblib  baseline_meter_clf.joblib  baseline_report.txt  mlp_meter_clf.joblib
notebooks/: 01_explore_raw_data.ipynb  02_debug_syllabifier.ipynb  03_error_analysis.ipynb
notebooks/.ipynb_checkpoints/: 01_explore_raw_data-checkpoint.ipynb
src/: ReadMe.md  __init__.py  analyze_text.py  api.py  build_chanda_rules.py  build_dataset.py  chanda_parser.py  eval_tools.py  feature_extractor.py  model_utils.py  normalization.py  ocr_bridge.py  pada_sandhi.py  padapatha.py  padapatha_lookup.py  rule_based_classifier.py  svara_parser.py  syllabifier.py  train_baseline_model.py  train_fullchanda_model.py  train_mlp_model.py
tests/: test_chanda_parser.py  test_end_to_end.py  test_normalization.py  test_syllabifier.py
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+5 files in other folders)
