[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vedic-chandas"
version = "0.1.0"
description = "Vedic + Classical Sanskrit Chandas Identification System"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "tabulate>=0.9.0",
    "click>=8.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src"]
